# Agentic-Sync

./: .eslintrc.json  .gitignore  .gitkeep  .jestrc.json  CHANGELOG.md  CLAUDE.md  DEPENDENCY_MAP.json  IX-Tasks.command  LICENSE  MULTI_INSTANCE_README.md  README-DATA-MODELS.md  README.md  REMOTE_SYNC.md  TASK_CARD_BUG_FIX.md  TASK_COMPLETION.md  TASK_COMPONENT_DOCUMENTATION.md  TASK_DOCUMENTATION.md  TODO.md  build-summary.md  cypress.config.js  fix-task-links.patch  jest.config.js  jest.setup.js  log-whitespace-task-completion.js  next.config.js  package-lock.json  package.json  tailwind.config.js  tauri.conf.json  tsconfig.json  update-task-status.js  update-whitespace-task.js  vercel.json
.husky/: pre-commit
.ix-sync/: tasks.json
.vercel/: project.json
__tests__/: AgentIntegration.test.tsx  BackendGenerator.test.ts  DataModelConfig.test.tsx  DataModelProvider.test.tsx  EventBus.test.ts  ItemSection.test.tsx  TESTING.md  TaskActions.test.tsx  TaskCard.test.tsx  TaskCardHeader.test.tsx  TaskContext.test.tsx  TaskContextSync.test.tsx  TaskCreation.test.tsx  TaskDataV2.test.tsx  TaskFilters.test.tsx  TaskFiltersIntegration.test.tsx  TaskForm.test.tsx  TaskItemIntegration.test.tsx  TaskSyncService.test.ts  jest.config.local.js  markTaskActionable.test.tsx  markTaskActionableIntegration.test.tsx
docs/: BACKEND_REFERENCE_IMPLEMENTATION.md  DOCUMENTATION_VIEWER.md  ENHANCED_UI_GUIDE.md  MARKDOWN_SUPPORT.md  SHARED_COMPONENTS_MIGRATION.md  SHARED_COMPONENTS_MIGRATION_PLAN.md  TASKS_CORE_INTEGRATION.md  (+8 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+241 files in other folders)
